fix find bugs check